<resources>
    <string name="app_name">KotlinExample</string>

    <string name="button_click_name">Click Me! Show SnackBar!</string>
    <string name="button_intent_name">only intent</string>
    <string name="button_intent_and_value_name">intent value</string>
    <string name="button_intent_and_result_name">intent result</string>
    <string name="button_result_return_name">Return Result Sum</string>
    <string name="button_intent_to_fragment_name">Go FragmentActivity</string>
    <string name="button_thread_name">Thread Activity</string>
    <string name="button_name_thread_start">Timer Start</string>
    <string name="button_name_thread_stop">Timer Stop</string>
    <string name="timer_init_text">00:00</string>
    <string name="button_name_function">Function Activity</string>
    <string name="button_name_control_flow">Control Flow Activity</string>
    <string name="button_name_array">Array Activity</string>
    <string name="button_name_iterable">Iterable Activity</string>
    <string name="button_name_class">Class Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_button_commit_name">fragment commit</string>
    <string name="fragment_button_remove_name">fragment remove</string>
    <string name="fragment_button_data_pass_fragment_to_activity_name">fragment data to activity</string>
</resources>