<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_click_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_intent"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="16dp"
            android:autoSizeMinTextSize="8dp"
            android:autoSizeStepGranularity="1dp"
            android:autoSizeTextType="uniform"
            android:backgroundTint="#FFDADA"
            android:maxLines="1"
            android:text="@string/button_intent_name"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/btn_intent_and_value"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btn_intent_and_value"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="16dp"
            android:autoSizeMinTextSize="8dp"
            android:autoSizeStepGranularity="1dp"
            android:autoSizeTextType="uniform"
            android:backgroundTint="#FFDADA"
            android:maxLines="1"
            android:text="@string/button_intent_and_value_name"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/btn_intent_and_result"
            app:layout_constraintStart_toEndOf="@id/btn_intent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btn_intent_and_result"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="16dp"
            android:autoSizeMinTextSize="8dp"
            android:autoSizeStepGranularity="1dp"
            android:autoSizeTextType="uniform"
            android:backgroundTint="#FFDADA"
            android:maxLines="1"
            android:text="@string/button_intent_and_result_name"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_intent_and_value"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_intent_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_intent_to_fragment_name" />

    <Button
        android:id="@+id/btn_intent_thread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_thread_name"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_intent_function"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_name_function"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_intent_control_flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_name_control_flow"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_intent_array"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_name_array"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_intent_iterable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_name_iterable"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_intent_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_name_class"
        android:textAllCaps="false" />

</LinearLayout>